Colo Picker eyedropper not working properly inside the Blender preferences window #111295
Labels
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Code Documentation
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Viewport & EEVEE
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Module
Viewport & EEVEE
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Severity
High
Severity
Low
Severity
Normal
Severity
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
No due date set.
Dependencies
No dependencies set.
Reference: blender/blender#111295
Loading…
Reference in New Issue
Block a user
No description provided.
Delete Branch "%!s()"
Deleting a branch is permanent. Although the deleted branch may continue to exist for a short time before it actually gets removed, it CANNOT be undone in most cases. Continue?
System Information
Operating system: Win 10
Blender Version
Broken: blender-4.0.0-alpha+main.1ce9c2b1f831-windows.amd64-release
Worked: builds from last week, maybe
Short description of error
When you try to pick a color using the eyedropper inside of the blender preferences window, it doesn't work properly. It just keep changing to an arbitrary grey color...
Exact steps for others to reproduce the error
Use the eyeddropper to pick any color inside the preferences window. The result will always be an arbitrary grey color... See the attached vid...
Can confirm. The eye dropper is picking color from the main window instead of whatever is on the screen directly.
Also the eyedropper seems to be averaging samples from mouse dragging while button down (This might be the expected behaviour)
d20f26aeb6
seems to be correct.likely caused by
5741a5d433
Caused by
5741a5d433
@Harley(that patch also doesn't seem to enable eye dropper outside blender window... on linux here 🤔 )
Thanks for this report. This one is very interesting.
In order for this improved functionality to work we need to know which window we are picking from. That uses
WM_window_find_under_cursor
. AFAIK the last time I was mucking about in that function it was a bit of a mess, in how it had to basically guess which window was visible under the cursor. The "guessing" because we don't really have a sense of "z-order" with our windows.But that function looks to be refactored beautifully and perfectly for this use. But it is made to work perfectly only if given per-platform help in the form of a specific ghost function. Without that it defaults to looking through each window in turn and checking if the cursor position is within window bounds. Because the main window is before its children in the windows list it will return the main window first when the two overlap. That default behavior - in GHOST_IWindow *GHOST_System::getWindowUnderCursor - should probably be checking the windows in reverse order. I'll probably ignore that though and add a specific replacement for Windows that use the real visible z-order.
It looks like I just need to make a Windows-specific getWindowUnderCursor function. Should be quick and easy and can get it reviewed through the platform module.