intern/ghost/GHOST_ISystem.hh
@@ -332,7 +332,10 @@ class GHOST_ISystem {
   virtual void setAutoFocus(const bool auto_focus) = 0;
 
   /**
-   * Get the Window under the cursor.
+   * Get the Window under the cursor. Although coordinates of the mouse are supplied, platform-
+   * specific implementations are free to ignore these and query the mouse location themselves, due
+   * to them possibly being incorrect under certain conditions, for example when using multiple
+   * monitors that vary in scale and/or DPI.
    * \param x: The x-coordinate of the cursor.
    * \param y: The y-coordinate of the cursor.
    * \return The window under the cursor or nullptr if none.
